renaming SuccessLoginResource to SuccessAuthResponseResource and updating corresponding places in code
